[package]
name = "practice-02"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = "0.26"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dotenv = "0.15"